# TrainDispatchKit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile  项目基本需求文档.mdown
doc/html/: annotated.html  carriage_8h_source.html  carriage__buffers_8h_source.html  carriage__dispatcher_8h_source.html  classTD.html  classTrainDispatchKitUI-members.html  classTrainDispatchKitUI.html  classXXYY_1_1CarriageBuffers-members.html  classXXYY_1_1CarriageBuffers.html  classXXYY_1_1CarriageDipatcher-members.html  classXXYY_1_1CarriageDipatcher.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  step_8h_source.html  structXXYY_1_1Carriage-members.html  structXXYY_1_1Carriage.html  structXXYY_1_1Step-members.html  structXXYY_1_1Step.html  train__dispatch__kit__ui_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  (+2 more)
include/: carriage.h  carriage_buffers.h  carriage_dispatcher.h  train_dispatch_kit_ui.h
src/: carriage_buffers.cpp  carriage_dispatcher.cpp  train_dispatch_kit.cpp  train_dispatch_kit_ui.cpp  train_dispatch_kit_ui.sublime-workspace
test/: a.out  carriage.h  carriage_buffers.h  carriage_dispatcher.cpp  step.h  test.cpp  train_dispatch_kit_ui.h
